--- a/Geopelia/project.json
+++ b/Geopelia/project.json
@@ -1,12 +1,14 @@
 ﻿{
   "dependencies": {
     "CoreTweet": "0.6.1.267",
+    "CoreTweet.Streaming.Reactive": "0.6.0.251",
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Prism.Unity": "6.2.0-pre2",
-    "ReactiveProperty": "2.4.2"
+    "ReactiveProperty": "2.4.2",
+    "Rx-Main": "2.3.0-beta2"
   },
   "frameworks": {
     "uap10.0": {}
