--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+############################################################
+# Product Project                                          #
+############################################################
 Geopelia/bin/
 Geopelia/obj/
 Geopelia/Models/TwitterConst.cs
+
+############################################################
+# Test Project                                             #
+############################################################
+GeopeliaTest/bin/
+GeopeliaTest/obj/
