[wip] アプリ起動時の認証機能実装中。保存された認証情報の値が null になってしまっている問題がある。

--- a/Geopelia/Geopelia.csproj
+++ b/Geopelia/Geopelia.csproj
@@ -103,9 +103,11 @@
       <DependentUpon>DraftLogo.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\PictureModel.cs" />
+    <Compile Include="Models\TokenModel.cs" />
     <Compile Include="Models\TweetModel.cs" />
     <Compile Include="Models\TwitterClient.cs" />
     <Compile Include="Models\TwitterConst.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="ViewModels\TweetCreatePageViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\TweetItemViewModel.cs" />
