--- a/Geopelia/project.json
+++ b/Geopelia/project.json
@@ -1,14 +1,14 @@
 ﻿{
   "dependencies": {
-    "CoreTweet": "0.6.1.267",
+    "CoreTweet": "0.7.0-beta2",
     "CoreTweet.Streaming.Reactive": "0.6.0.251",
-    "Microsoft.ApplicationInsights": "1.0.0",
-    "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
-    "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
+    "Microsoft.ApplicationInsights": "2.0.0-rc1",
+    "Microsoft.ApplicationInsights.PersistenceChannel": "2.0.0-beta3",
+    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.0.3",
-    "Prism.Unity": "6.2.0-pre2",
-    "ReactiveProperty": "2.4.2",
+    "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
+    "Prism.Unity": "6.2.0-pre3",
+    "ReactiveProperty": "2.6.0-beta1",
     "Rx-Main": "2.3.0-beta2"
   },
   "frameworks": {
